# ghostverse2-smart-contracts

./: .gitignore  Cargo.toml  README.md
meta/: Cargo.toml
meta/src/: main.rs
scenarios/: ghostversemarketplace.scen.json
src/: ghostversemarketplace.rs
tests/: ghostversemarketplace_scenario_go_test.rs  ghostversemarketplace_scenario_rs_test.rs
wasm/: Cargo.toml
wasm/src/: lib.rs
