[package]
name = "ghostversemarketplace"
version = "0.0.1"
authors = ["Vladimir Rostok"]
edition = "2021"
publish = false

[lib]
path = "src/ghostversemarketplace.rs"

[dependencies.multiversx-sc]
version = "0.52.3"

[dev-dependencies]
num-bigint = "0.4"

[dev-dependencies.multiversx-sc-scenario]
version = "0.52.3"

[workspace]
members = [
    ".",
    "meta",
]
